# amp-chatbot

./: README.md  requirements.txt  setup.cfg  setup.env  setup.py  setup.sh
chatbot/: bedrock.py  boto_ex.py  refresh_config_key.py
docs/: README.md  requirements.txt
docs/src/: build.docs.rst  conf.py  helloworld.rst  index.rst
tests/: env  linted  main  requirements.txt
tests/devops/: azure-pipelines.yml
tests/unittests/: test_module.py
