[metadata]
# setup.py option defaults
license_file = LICENSE
description-file = README.md

# We use setup.cfg in favour of many individual/specif dot-files for
# configuring of our various development tools to minimize file
# pollution in the project folder
[pycodestyle]
max-line-length=120

[pylint]
max-line-length=120

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True

[sdist]
formats=bztar

[bdist]
formats=bztar
